[751/906] gldisplay: Don't hold lock while sending a message to the GL thread

https://bugzilla.gnome.org/show_bug.cgi?id=704247